# claude-mem-os

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  README_ZH.md  pyproject.toml
launchd/: com.claude-mem-os.bridge.plist.example
src/claude_mem_os_bridge/: bridge.py
