[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "claude-mem-os-bridge"
version = "0.1.0"
description = "Frankenstein glue project that syncs claude-mem summaries into MemOS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "yuancafe" }
]
keywords = ["claude-mem", "memos", "memos-api-mcp", "memory", "bridge"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
claude-mem-os-bridge = "claude_mem_os_bridge.bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_mem_os_bridge"]

